Add initial HTML structure for QR Reward Campaign

--- a/index.html
+++ b/index.html
@@ -1,1 +1,29 @@
- 
+ <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>QR Reward Campaign</title>
+  <link rel="stylesheet" href="styles.css">
+  <!-- Google Maps JS API -->
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=__GOOGLE_MAPS_API_KEY__"
+    defer></script>
+  <script src="app.js" defer></script>
+</head>
+<body>
+  <div id="app">
+    <h1>🚀 QR Rewards</h1>
+    <div id="map"></div>
+    <div id="spin-section">
+      <h2>Spin to Win</h2>
+      <button id="spinBtn">Spin</button>
+      <p id="rewardText"></p>
+      <div id="qr-container">
+        <img id="qrImage" alt="QR Code">
+      </div>
+    </div>
+  </div>
+</body>
+</html>
+
+
